# anolis-provider-sim

./: .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  requirements-lock.txt  requirements.txt
.ci/: dependency-pins.yml
.github/workflows/: ci.yml  metrics.yml  release.yml
config/: minimal.yaml  multi-tempctl.yaml  provider-sim.yaml
docs/: architecture-signal-registry.md  configuration.md  multi-provider.md  setup-linux.md  setup-win.md
docs/demos/: demo-chamber.md  demo-reactor.md
examples/: README.md
examples/inert_mode/: README.md  test_inert.py
examples/non_interacting_mode/: README.md  test_non_interacting.py
examples/sim_mode/: README.md  test_sim.py
scripts/: README.md  generate_proto_python.ps1  generate_proto_python.sh
src/: config.cpp  config.hpp
src/chaos/: chaos_control_device.cpp  chaos_control_device.hpp  fault_injection.cpp  fault_injection.hpp
src/core/: handlers.hpp  health.cpp  health.hpp  main.cpp  startup_report.hpp
src/core/transport/: framed_stdio.cpp  framed_stdio.hpp
src/devices/common/: device_manager.cpp  device_manager.hpp  signal_registry.hpp
src/simulation/: simulation_engine.hpp
src/simulation/adapters/: protocol_adapter.hpp
tests/: README.md  test_adpp_integration.py  test_config_startup.py  test_fault_injection.py  test_fluxgraph_integration.py  test_hello.py  test_multi_instance.py  test_multi_provider_scenario.py
tests/support/: env.py  proto_bootstrap.py
